<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginOTP">

    <LinearLayout
        android:id="@+id/llTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:paddingBottom="10dp"
            android:text="@string/proceso_verificacion"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/descLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/msg_continuar"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTitulo">


        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/etCodigo"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorAccent"
            app:bar_active_color="@color/primaryDarkColor"
            app:bar_enabled="true"
            app:bar_height="2dp"
            app:height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:length="6"
            app:otp_box_background="@color/grisDefault"
            app:otp_text_size="16sp"
            app:width="40dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVerificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rojo"
        android:fontFamily="@font/open_sans_semibold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/verificar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rojo"
        android:fontFamily="@font/open_sans_semibold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/reenviar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pbLoginOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAltPrimary"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAltPrimary"
        android:progress="100"
        android:progressTint="@color/colorAltPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnVerificar"
        app:layout_constraintEnd_toEndOf="@+id/btnVerificar"
        app:layout_constraintStart_toStartOf="@+id/btnVerificar"
        app:layout_constraintTop_toTopOf="@+id/btnVerificar" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snackbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>